style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Savate:ital,wght@0,200..900;1,200..900&display=swap');

*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: "Roboto", sans-serif;
}

html{
    scroll-behavior: smooth;
}

body{
    color: #2f2f2f;
}

header{
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 20px 100px;
    background-color: #fff;
}

.logo{
    color: #2f2f2f;
    font-weight: bold;
    text-decoration: none;
    font-size: 2.5em;
}

header .logo span{
    color: #ff0157;
} /* More precise way to target the span element */

header .navigation{
    display: flex;
    list-style: none;
    gap: 30px;
}

header .navigation li a{
    text-decoration: none;
    color: #2f2f2f;
    font-weight: 400;
    font-size: 1.5em;
}

header .navigation li a, .btn,
.contactform .inputbox input[type="submit"],
.footer i{
    display: inline-block;
    transition: transform 0.3s ease;
}

header .navigation li a:hover, 
.btn:hover, .contactform .inputbox input[type="submit"]:hover,
.footer i:hover{
    transform: scale(1.15);
}

header .navigation li a:hover{
    transform: scale(1.1);
    color: #ff0157;
}

.menu-toggle{
     color: #2f2f2f;
    font-size: 20px;
    cursor: pointer;
    display: none;
}

.banner{
    width: 100%; 
    height: 100vh; /* Viewport height */
    display: flex;
    justify-content: center;
    align-items: center;
    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),url(https://i.postimg.cc/s29LNR86/bg.jpg); /* Darkens the image */
    background-size: cover;
    box-shadow: 0px 15px 20px -10px rgba(0, 0, 0, 0.3);
    position: relative;
    z-index: 10;
}

.content{
    max-width: 900px;
    text-align: center;
}

.content h2{
    font-size: 5em;
    color: white;
}

.content p{
    color: white;
    font-size: 1em;
}

.btn{
    font-size: 1.5em;
    color: white;
    background-color: #ff0157;
    text-decoration: none;
    padding: 10px 30px;
    margin-top: 40px; /* anchor tags are inline elements -- must change display to inline-block for margin to work */
    text-transform: uppercase;
    letter-spacing: 2px;
    display: inline-block;
    border-radius: 5px;
    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
}

.about{
    padding: 80px;
}

.about .col50 p{
    line-height: 1.6;
    font-size: 1.1em;
}
.row{
    display: flex;
    gap: 3em;
    width: 100%;
}

.row .col50{
    width: 50%;
}

.imgbox{
    width: 100%;
    min-height: 300px;
}

.imgbox img{
    width: 100%;
    height: 100%;
    object-fit: cover;
    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
}

.titleText span{
    color: #ff0157;
    font-weight: 600;
    font-size: 1.5em;
}

.titleText{
    color: #2f2f2f;
    font-size: 2em;
    font-weight: 400;
}

.menu{
    padding: 80px;
}

.title{
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.menu-content{
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    gap: 3em;
    padding: 3em;
}

.menu-content .box{
    width: 340px;
    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
    padding: 1em;
}

.text{
    text-align: center;
    padding: 15px 0 5px;
}

.menu-content .box .imgbox{
    width: 100%;
    height: 300px;
}

.expert{
    padding: 40px 80px 80px 80px;
}

.expert .menu-content .box{
    width: 250px;
}

.testimonial{
    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(https://plus.unsplash.com/premium_photo-1664475225732-af47de223ff5?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
    background-size: cover;
    box-shadow: rgba(0, 0, 0, 0.3) 0px 3px 8px;
    position: relative;
    z-index: 10;
    /* margin-bottom: 40px; */
}

.white {
    color: #fff;
}

.testimonial .content{
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    margin-top: 40px;
    max-width: 100%;
    gap: 3em;
}

.testimonial .content .box{
    width: 350px;
    padding: 40px;
    background-color: #fff;
    color: #2f2f2f;
    margin-bottom: 40px;
}


.text h2{
    color: #ff0157;
    font-weight: 600;
    font-size: 1.5em;
    margin-top: 20px;
}

.text p{
    color: #2f2f2f;
    font-style: italic;
}

.testimonial .content .box .imgbox img{
    border-radius: 50%;
    object-fit: cover;
    object-position: center top;
    height: 300px;
    width: 300px;
}

.testimonial .content .box .imgbox{
    width: 100%;
    height: 300px;
}

.contactform{
    padding: 75px 50px 20px 50px;
    box-shadow: rgba(0, 0, 0, 0.3) 0px 5px 15px;
    background: #fff;
    max-width: 500px;
    margin: 50px 0 0 50px;
    position: relative;
    z-index: 10;
}

.contactform h3{
    color: #2f2f2f;
    font-size: 1.2em;
    margin-bottom: 20px;
    font-weight: 500;
}

.contactform .inputbox{
    width: 100%;
    margin-bottom: 20px;
}

.contactform .inputbox input,
.contactform .inputbox textarea{
    width: 100%;
    border: 1px solid #555;
    border-radius: 10px;
    padding: 10px;
    outline: none;
    font-size: 1em;
    font-weight: 300;
    resize: none;
}

.contactform .inputbox input[type="submit"]{
    font-size: 1em;
    color: #fff;
    background-color: #ff0157;
    display: inline-block;
    max-width: 100px;
    text-transform: uppercase;
    text-decoration: none;
    letter-spacing: 2px;
    font-weight: 500;
    border: none;
    cursor: pointer;
    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
}

.contact{
    background:url(https://i.postimg.cc/4NmrNq7y/bg3.jpg);
    background-size: cover;
    /* margin-bottom: 40px; */
    background-position: center;
    padding-top: 50px;
    padding-bottom: 50px;
}

.footer i{
    color: #fff;
    font-size: 1.2em;
    cursor: pointer;
    transition: 0.3s;
}

.footer i:hover{
    transform: scale(1.15) translateY(-5px);
}

.footer{
    background-color: #ff0157;
    width: 100%;
    height: 70px;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    box-shadow: 0 -5px 15px rgba(0, 0, 0, 0.2);
    gap: 15px;
}

.footer p{
    color: #fff;
    font-weight: 300;
}

@media only screen and (max-width:599px){
    *{
        outline: 2px solid red !important;
    }

    body, html{
        overflow-x: hidden;
        width: 100%;
    }

    .menu-toggle{
        display: block;
        font-size: 24px;
        z-index: 1001;
    }

    header{
        display: flex;
        justify-content: space-between;
        padding: 10px;
        gap: 5px;
        align-items: center;
    }

    .logo{
        font-size: 1.5em;
    }

    header .navigation{
        display: none;
        flex-direction: column;
        position: absolute;
        background-color: #fff;
        top: 60px; /* Position ourself below the navbar */
        left: 0;
        right: 0;
        padding: 20px 0;
        z-index: 1000; /* Staying above other elements */
        gap: 10px;
        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
}

header .navigation.active{
    display: flex;
}

header .navigation li{
    text-align: center;
    width: 100%;
}

header .navigation li a{
    text-decoration: none;
    color: #2f2f2f;
    font-weight: 400;
    font-size: 1.2em;
    padding: 10px;
    display: block;
}

header .navigation li a:active{
    color: #ff0157;
    transform: scale(.95);
}

.content{
    width: 100%;
    max-width: 100%;
    margin: 20px auto;
    padding: 0 20px;
    overflow: hidden;
    /* text-align: center; */
}

.content h2{
    font-size: 2.5em;
    color: white;
    word-wrap: break-word;
}

.content p{
    color: white;
    width: 100%;
    word-wrap: break-word;
    text-align: center;
    font-size: .6em;
}

.btn{
    font-size: 1em;
    color: white;
    background-color: #ff0157;
    text-decoration: none;
    padding: 8px 20px;
    margin-top: 40px; /* anchor tags are inline elements -- must change display to inline-block for margin to work */
    text-transform: uppercase;
    letter-spacing: 2px;
    display: inline-block;
    border-radius: 5px;
    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
}
  
}

